tests/ui/attributes/doc-attr.stderr
error[E0539]: malformed `doc` attribute input
  --> $DIR/doc-attr.rs:9:1
   |
LL | #[doc(123)]
   | ^^^^^^---^^
   |       |
   |       expected this to be of the form `... = "..."`

error[E0539]: malformed `doc` attribute input
  --> $DIR/doc-attr.rs:11:1
   |
LL | #[doc("hello", "bar")]
   | ^^^^^^-------^^^^^^^^^
   |       |
   |       expected this to be of the form `... = "..."`

error[E0539]: malformed `doc` attribute input
  --> $DIR/doc-attr.rs:11:1
   |
LL | #[doc("hello", "bar")]
   | ^^^^^^^^^^^^^^^-----^^
   |                |
   |                expected this to be of the form `... = "..."`

error: unknown `doc` attribute `as_ptr`
  --> $DIR/doc-attr.rs:5:7
   |
LL | #[doc(as_ptr)]
   |       ^^^^^^
   |
   = note: `#[deny(invalid_doc_attributes)]` on by default

error: unknown `doc` attribute `foo::bar`
  --> $DIR/doc-attr.rs:14:7
   |
LL | #[doc(foo::bar, crate::bar::baz = "bye")]
   |       ^^^^^^^^

error: unknown `doc` attribute `crate::bar::baz`
  --> $DIR/doc-attr.rs:14:17
   |
LL | #[doc(foo::bar, crate::bar::baz = "bye")]
   |                 ^^^^^^^^^^^^^^^

error: unknown `doc` attribute `as_ptr`
  --> $DIR/doc-attr.rs:2:8
   |
LL | #![doc(as_ptr)]
   |        ^^^^^^

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0539`.
